--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -272,27 +272,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Tea</td>\n",
+       "      <td>Coffee</td>\n",
        "      <td>Plain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Coffee</td>\n",
-       "      <td>Chocolate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Coffee</td>\n",
+       "      <td>Tea</td>\n",
        "      <td>Plain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
        "      <td>Tea</td>\n",
+       "      <td>Chocolate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Coffee</td>\n",
        "      <td>Plain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Tea</td>\n",
+       "      <td>Coffee</td>\n",
        "      <td>Plain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -302,27 +302,27 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>196</th>\n",
-       "      <td>Tea</td>\n",
-       "      <td>Plain</td>\n",
+       "      <td>Coffee</td>\n",
+       "      <td>Chocolate</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>197</th>\n",
-       "      <td>Coffee</td>\n",
+       "      <td>Tea</td>\n",
        "      <td>Plain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>198</th>\n",
        "      <td>Tea</td>\n",
-       "      <td>Chocolate</td>\n",
+       "      <td>Plain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>199</th>\n",
-       "      <td>Tea</td>\n",
-       "      <td>Chocolate</td>\n",
+       "      <td>Coffee</td>\n",
+       "      <td>Plain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>200</th>\n",
-       "      <td>Tea</td>\n",
+       "      <td>Coffee</td>\n",
        "      <td>Chocolate</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -332,17 +332,17 @@
       ],
       "text/plain": [
        "      drink    biscuit\n",
-       "0       Tea      Plain\n",
-       "1    Coffee  Chocolate\n",
-       "2    Coffee      Plain\n",
-       "3       Tea      Plain\n",
-       "4       Tea      Plain\n",
+       "0    Coffee      Plain\n",
+       "1       Tea      Plain\n",
+       "2       Tea  Chocolate\n",
+       "3    Coffee      Plain\n",
+       "4    Coffee      Plain\n",
        "..      ...        ...\n",
-       "196     Tea      Plain\n",
-       "197  Coffee      Plain\n",
-       "198     Tea  Chocolate\n",
-       "199     Tea  Chocolate\n",
-       "200     Tea  Chocolate\n",
+       "196  Coffee  Chocolate\n",
+       "197     Tea      Plain\n",
+       "198     Tea      Plain\n",
+       "199  Coffee      Plain\n",
+       "200  Coffee  Chocolate\n",
        "\n",
        "[201 rows x 2 columns]"
       ]
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1075,7 @@
        "4           5.0          3.6           1.4          0.2  setosa"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1096,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1145,7 @@
     "knn = KNeighborsClassifier(n_neighbors=3)\n",
     "\n",
     "# Performing 5-fold cross-validation\n",
-    "cv_scores = cross_val_score(knn, X, y, cv=5)\n",
+    "cv_scores = cross_val_score(knn, x, y, cv=5)\n",
     "\n",
     "# Calculating the mean and standard deviation of the cross-validation scores\n",
     "mean_accuracy = cv_scores.mean()\n",
