--- a/project.ipynb
+++ b/project.ipynb
@@ -129,7 +129,7 @@
     "    - Iris Virginica\n",
     "\n",
     "<figure align=\"center\">\n",
-    "    <img src=\"https://machinelearninghd.com/wp-content/uploads/2021/03/iris-dataset.png\" width=\"500\" title=\"Iris Species\"/>\n",
+    "    <img src=\"images/iris.png\" width=\"500\" title=\"Iris Species\"/>\n",
     "    <figcaption> Iris Species (Chauhan 2021)</figcaption>\n",
     "</figure>\n"
    ]
