--- a/project.ipynb
+++ b/project.ipynb
@@ -51,10 +51,9 @@
     "\n",
     "In this project, we will focus on classification, where the goal is to assign each data instance to one of several predefined classes or categories.\n",
     "\n",
-    "<figure align=\"center\">\n",
-    "    <img src=\"https://media.geeksforgeeks.org/wp-content/cdn-uploads/20190522174744/MachineLearning.png\" width=\"500\" title=\"Types of Machine Learning\"/>\n",
-    "    <figcaption> Types of Machine Learning (Geeksforgeeks n.d.)</figcaption>\n",
-    "</figure>\n"
+    "![Types](https://media.geeksforgeeks.org/wp-content/cdn-uploads/20190522174744/MachineLearning.png)\n",
+    "\n",
+    "*Figure 1: Types of Machine Learning (Geeksforgeeks n.d.)*\n"
    ]
   },
   {
@@ -100,10 +99,9 @@
     "\n",
     "The Iris Dataset, aslo known as the Fisher's Iris Dataset, is a multivariate dataset created by Sir Ronald Aymer Fisher in 1936. \n",
     "\n",
-    "<figure align=\"center\">\n",
-    "    <img src=\"https://upload.wikimedia.org/wikipedia/commons/a/aa/Youngronaldfisher2.JPG\" height=\"300\" title=\"Ronald Aymer Fisher\"/>\n",
-    "    <figcaption> R. A. Fisher (Wikipedia 2023)</figcaption>\n",
-    "</figure>\n",
+    "![Fisher](https://upload.wikimedia.org/wikipedia/commons/a/aa/Youngronaldfisher2.JPG)\n",
+    "\n",
+    "*Figure 2: R. A. Fisher (Wikipedia 2023)*\n",
     "\n",
     "\n",
     "This dataset is also known as Anderson's Iris dataset, named after Edgar Anderson who collected the data to quantify the variations among Iris flowers of three different classes.\n",
@@ -128,10 +126,10 @@
     "    - Iris Versicolour\n",
     "    - Iris Virginica\n",
     "\n",
-    "<figure align=\"center\">\n",
-    "    <img src=\"images/iris.png\" width=\"500\" title=\"Iris Species\"/>\n",
-    "    <figcaption> Iris Species (Chauhan 2021)</figcaption>\n",
-    "</figure>\n"
+    "![Iris](https://machinelearninghd.com/wp-content/uploads/2021/03/iris-dataset.png)\n",
+    "\n",
+    "*Figure 3: Iris Species (Chauhan 2021)*\n",
+    "\n"
    ]
   },
   {
