--- a/project.ipynb
+++ b/project.ipynb
@@ -51,9 +51,10 @@
     "\n",
     "In this project, we will focus on classification, where the goal is to assign each data instance to one of several predefined classes or categories.\n",
     "\n",
-    "![Types](https://media.geeksforgeeks.org/wp-content/cdn-uploads/20190522174744/MachineLearning.png)\n",
-    "\n",
-    "*Figure 1: Types of Machine Learning (Geeksforgeeks n.d.)*\n"
+    "<figure align=\"center\">\n",
+    "    <img src=\"https://media.geeksforgeeks.org/wp-content/cdn-uploads/20190522174744/MachineLearning.png\" width=\"500\" title=\"Types of Machine Learning\"/>\n",
+    "    <figcaption> Figure 1: Types of Machine Learning (Geeksforgeeks n.d.) </figcaption>\n",
+    "</figure>\n"
    ]
   },
   {
@@ -95,18 +96,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Historical Background \n",
+    "#### Historical Background\n",
     "\n",
     "The Iris Dataset, aslo known as the Fisher's Iris Dataset, is a multivariate dataset created by Sir Ronald Aymer Fisher in 1936. \n",
     "\n",
-    "![Fisher](https://upload.wikimedia.org/wikipedia/commons/a/aa/Youngronaldfisher2.JPG)\n",
-    "\n",
-    "*Figure 2: R. A. Fisher (Wikipedia 2023)*\n",
+    "<figure align=\"center\">\n",
+    "    <img src=\"https://upload.wikimedia.org/wikipedia/commons/a/aa/Youngronaldfisher2.JPG\" height=\"300\" title=\"Ronald Aymer Fisher\"/>\n",
+    "    <figcaption> Figure 2: R. A. Fisher (Wikipedia 2023)</figcaption>\n",
+    "</figure>\n",
     "\n",
     "\n",
     "This dataset is also known as Anderson's Iris dataset, named after Edgar Anderson who collected the data to quantify the variations among Iris flowers of three different classes.\n",
     "\n",
-    "Originally, the dataset served as an example of linear discrimination analysis. However, over time, it gained popularity as a benchmark for evaluating statistical classification methods in machine learning. Today, the Iris Dataset is widely used as an introductory dataset for machine learning (Chauhan 2021)."
+    "Originally, the dataset served as an example of linear discrimination analysis. However, over time, it gained popularity as a benchmark for evaluating statistical classification methods in machine learning. Today, the Iris Dataset is widely used as an introductory dataset for those starting in machine learning (Chauhan 2021)."
    ]
   },
   {
@@ -124,9 +126,10 @@
     "5. Class:\n",
     "    - Iris Setosa\n",
     "    - Iris Versicolour\n",
-    "    - Iris Virginica\n",
+    "    - Iris Virginica   \n",
     "\n",
-    "![Iris](https://machinelearninghd.com/wp-content/uploads/2021/03/iris-dataset.png)\n",
+    "\n",
+    "<img src=\"https://machinelearninghd.com/wp-content/uploads/2021/03/iris-dataset.png\" width=\"500\" title=\"Iris Species\"/>\n",
     "\n",
     "*Figure 3: Iris Species (Chauhan 2021)*\n",
     "\n"
