--- a/project.ipynb
+++ b/project.ipynb
@@ -101,7 +101,7 @@
     "The Iris Dataset, aslo known as the Fisher's Iris Dataset, is a multivariate dataset created by Sir Ronald Aymer Fisher in 1936. \n",
     "\n",
     "<figure align=\"center\">\n",
-    "    <img src=\"https://upload.wikimedia.org/wikipedia/commons/a/aa/Youngronaldfisher2.JPG\" height=\"300\" title=\"Ronald Aymer Fisher\"/>\n",
+    "    <img src=\"https://raw.githubusercontent.com/dariairad/mls-assessment/main/images/fisher.jpeg\" height=\"300\" title=\"Ronald Aymer Fisher\"/>\n",
     "    <figcaption> Figure 2: R. A. Fisher (Wikipedia 2023)</figcaption>\n",
     "</figure>\n",
     "\n",
@@ -126,13 +126,12 @@
     "5. Class:\n",
     "    - Iris Setosa\n",
     "    - Iris Versicolour\n",
-    "    - Iris Virginica   \n",
+    "    - Iris Virginica\n",
     "\n",
-    "\n",
-    "<img src=\"https://machinelearninghd.com/wp-content/uploads/2021/03/iris-dataset.png\" width=\"500\" title=\"Iris Species\"/>\n",
-    "\n",
-    "*Figure 3: Iris Species (Chauhan 2021)*\n",
-    "\n"
+    "<figure >\n",
+    "    <img src=\"https://machinelearninghd.com/wp-content/uploads/2021/03/iris-dataset.png\" align=\"center\" width=\"500\" title=\"Iris Species\"/>\n",
+    "    <figcaption> Figure 3: Iris Species (Chauhan 2021) </figcaption>\n",
+    "</figure>\n"
    ]
   },
   {
