--- a/project.ipynb
+++ b/project.ipynb
@@ -100,10 +100,9 @@
     "\n",
     "The Iris Dataset, aslo known as the Fisher's Iris Dataset, is a multivariate dataset created by Sir Ronald Aymer Fisher in 1936. \n",
     "\n",
-    "<figure align=\"center\">\n",
-    "    <img src=\"./images/fisher.jpeg\" height=\"300\" title=\"Ronald Aymer Fisher\"/>\n",
-    "    <figcaption> Figure 2: R. A. Fisher (Wikipedia 2023)</figcaption>\n",
-    "</figure>\n",
+    "<img src=\"./images/fisher.jpeg\" height=\"300\" title=\"Ronald Aymer Fisher\"/>\n",
+    "\n",
+    "*Figure 2: R. A. Fisher (Wikipedia 2023)*\n",
     "\n",
     "\n",
     "This dataset is also known as Anderson's Iris dataset, named after Edgar Anderson who collected the data to quantify the variations among Iris flowers of three different classes.\n",
@@ -128,8 +127,8 @@
     "    - Iris Versicolour\n",
     "    - Iris Virginica\n",
     "    \n",
-    "<figure >\n",
-    "    <img src=\"https://machinelearninghd.com/wp-content/uploads/2021/03/iris-dataset.png\" align=\"center\" width=\"500\" title=\"Iris Species\"/>\n",
+    "<figure align=\"center\">\n",
+    "    <img src=\"./images/iris.png\"  width=\"500\" title=\"Iris Species\"/>\n",
     "    <figcaption> Figure 3: Iris Species (Chauhan 2021) </figcaption>\n",
     "</figure>\n"
    ]
