--- a/project.ipynb
+++ b/project.ipynb
@@ -51,10 +51,10 @@
     "\n",
     "In this project, we will focus on classification, where the goal is to assign each data instance to one of several predefined classes or categories.\n",
     "\n",
-    "<figure align=\"center\">\n",
-    "    <img src=\"https://media.geeksforgeeks.org/wp-content/cdn-uploads/20190522174744/MachineLearning.png\" width=\"500\" title=\"Types of Machine Learning\"/>\n",
-    "    <figcaption> Figure 1: Types of Machine Learning (Geeksforgeeks n.d.) </figcaption>\n",
-    "</figure>\n"
+    "\n",
+    "<img src=\"https://media.geeksforgeeks.org/wp-content/cdn-uploads/20190522174744/MachineLearning.png\" width=\"500\" title=\"Types of Machine Learning\"/>\n",
+    "\n",
+    "*Figure 1: Types of Machine Learning (Geeksforgeeks n.d.)*\n"
    ]
   },
   {
@@ -127,10 +127,11 @@
     "    - Iris Versicolour\n",
     "    - Iris Virginica\n",
     "    \n",
-    "<figure align=\"center\">\n",
-    "    <img src=\"./images/iris.png\"  width=\"500\" title=\"Iris Species\"/>\n",
-    "    <figcaption> Figure 3: Iris Species (Chauhan 2021) </figcaption>\n",
-    "</figure>\n"
+    "\n",
+    "<img src=\"./images/iris.png\" width=\"500\" title=\"Iris Species\"/>\n",
+    "\n",
+    "*Figure 3: Iris Species (Chauhan 2021)*\n",
+    "\n"
    ]
   },
   {
