Minor Code Fixes + Spellcheck

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1139,12 +1139,12 @@
     }
    ],
    "source": [
-    "x = iris_df.iloc[:, :-1]  # Features\n",
+    "X = iris_df.iloc[:, :-1]  # Features\n",
     "y = iris_df.iloc[:, -1]   # Target labels\n",
     "knn = KNeighborsClassifier(n_neighbors=3)\n",
     "\n",
     "# Performing 5-fold cross-validation\n",
-    "cv_scores = cross_val_score(knn, x, y, cv=5)\n",
+    "cv_scores = cross_val_score(knn, X, y, cv=5)\n",
     "\n",
     "# Calculating the mean and standard deviation of the cross-validation scores\n",
     "mean_accuracy = cv_scores.mean()\n",
